0.06
 - Fix doc in Lexeme.

0.05 2020-12-23T15:41:04+01:00
 - Improve doc for Lexeme.

0.04 2020-12-20T02:27:02+01:00
 - Add check_lexeme() to Utils.
 - Add helper to Utils and rewrite to it.
 - Add link to Wikidata::Datatype::Struct in doc.
 - Fix SYNOPSIS section in doc of Utils.
 - Fix indentation in EXAMPLE in Item doc.

0.03 2020-12-11T16:19:01+01:00
 - Add test for check_property().
 - Update dependency to Mo::utils 0.03, because i need support of floating
   numbers in quantity.

0.02 2020-12-11T13:06:58+01:00
 - Add id parameter and method for Item.
 - Add page_id parameter and method for Item.

0.01 2020-12-11T11:46:07+01:00
 - First version.